--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -103,9 +103,9 @@
                 <target>
                     <![CDATA[
                     Kompisbyrån skapar kontakt mellan en ny och en etablerad svensk, med liknande intressen, 
-                    som ses i cirka 1 timme på en offentlig plats. Du kan bli Fikakompis eller Musikkompis.<br><br> 
+                    som träffas i cirka 1 timme på en offentlig plats. Du kan bli Fikakompis eller Musikkompis.<br><br> 
                     Fikakompis - Ni träffas, fikar och pratar svenska i cirka 1 timme. Ni vet på förhand att ni har 
-                    några liknande intressen att inleda samtalet med. Om ni tycker det är roligt får ni gärna ses 
+                    några liknande intressen att inleda samtalet med. Om ni tycker det är roligt får ni gärna träffas 
                     igen på egen hand. Om inte, gör inte det något för timmen har ändå uppfyllt sitt syfte.
                     ]]>
                 </target>
