--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -463,8 +463,7 @@
                             Personuppgiftsansvarig är Kompisbyråns styrelse.
                         </li>
                         <li>
-                            Vår ambition är att hitta en ny kompis till dig inom 30 dagar, men det kan ta både kortare och längre tid 
-                            beroende på din profil och hur många personer som också vill träffa nya kompisar. Det innebär att du kan få vänta.
+                            Vår ambition är att hitta en ny kompis till dig inom 30 dagar. Det innebär att du kan få vänta.
                         </li>
                         <li>
                             När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett email till dig.
