--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -461,8 +461,7 @@
                             password and update your profile. Controller of personal data is Kompisbyrån’s Board.
                         </li>
                         <li>
-                            Our ambition is to find a new friend for you within 30 days, but it may take both shorter and longer time depending 
-                            on your profile and the number of people who also want to meet new friends. That means that you may have to wait.
+                            Our ambition is to find a new friend for you within 30 days. That means that you may have to wait.
                         </li>
                         <li>
                             We confirm that we have received your application, by sending an e-mail to you.
