--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -482,6 +482,11 @@
                             språkskillnader kan skapa missuppfattningar.
                         </li>
                         <li>
+                            Du delar Kompisbyråns syn på alla människors lika värde. Det gäller oavsett kön, 
+                            könsöverskridande identitet eller uttryck, etnisk tillhörighet, religion eller annan 
+                            trosuppfattning, funktionsnedsättning, sexuell läggning och ålder.
+                        </li>
+                        <li>
                             Om du vill avregistrera dig, skicka ett e-mail till kontakt@kompisbyran.se.
                         </li>
                         <li>
