--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -487,6 +487,10 @@
                             language differences can create misunderstandings.  
                         </li>
                         <li>
+                            You share Kompispbyrån's belief in the equality of all human beings, regardless of sex, transgender identity or 
+                            expression, ethnicity, religion or other belief, disability, sexual orientation or age.
+                        </li>
+                        <li>
                             If you want to delete your account, please send an e-mail to kontakt@kompisbyran.se.
                         </li>
                         <li>
